[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracking_utils"
version = "0.1.0"
description = "Basic utilities for tracking"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Manan Lalit", email = "manan.lalit@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "data_utils @ git+ssh://git@github.com/lmanan/data_utils.git", # data loading utilities
    "scipy",
    "scikit-image",
    "networkx",
    "zarr",
    "motile",
    "gurobipy"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/lmanan/tracking_utils"
Issues = "https://github.com/lmanan/tracking_utils/issues"



